--- a/src/index.html
+++ b/src/index.html
@@ -67,50 +67,72 @@
         </p>
       </collapsible-fieldset>
 
+      <div class="main">
+        <ul class="availableMediums" data-bind="foreach: availableMediums">
+          <li data-bind="
+                text: name,
+                css: { selected: $data.key === $parent.selectedMedium() },
+                click: function () { $parent.selectedMedium($data.key) }
+              ">
+          </li>
+        </ul>
+        <div class="schedule">
+          <ul class="availableStages" data-bind="foreach: availableStages">
+            <li data-bind="
+                  text: name,
+                  css: { selected: $data.key === $parent.selectedStage() },
+                  click: function () { $parent.selectedStage($data.key) }
+                ">
+            </li>
+          </ul>
+          <div class="output">
+            <div class="targets">
+              <div>
+                <h1>Target EC</h1>
+                <span data-bind="text: currentStage().targetEc"></span>
+              </div>
 
-      <div class="formula">
-        <custom-select class="mediums" data-bind="customSelect: { options: availableMediums, value: selectedMedium, text: 'name', key: 'key' }" style="display: block; width: 100%;" layout="wrap"></custom-select>
-        <custom-select class="stages" data-bind="customSelect: { options: availableStages, value: selectedStage, text: 'name', key: 'key' }" layout="fill"></custom-select>
-        <div class="data">
-          <div class="targets">
-            <div>
-              <h1>Target EC</h1>
-              <span data-bind="text: currentStage().targetEc"></span>
+              <div>
+                <h1>Target PPM (500 Scale)</h1>
+                <span data-bind="text: currentStage().targetPpm500"></span>
+              </div>
+
+              <div>
+                <h1>Target PPM (700 Scale)</h1>
+                <span data-bind="text: currentStage().targetPpm700"></span>
+              </div>
             </div>
+            <div class="product-container">
+              <table class="products">
+                <thead>
+                  <tr>
+                    <th rowspan="2">Product</th>
+                    <th colspan="3" data-bind="text: options().tableLabel" style="text-align: right;"></th>
+                  </tr>
+                  <tr>
+                    <th>ppm (mg/L)</th>
+                    <th style="text-align: right;">Grams</th>
+                    <th style="text-align: right;">Dry Oz.</th>
+                  </tr>
+                </thead>
 
-            <div>
-              <h1>Target PPM (500 Scale)</h1>
-              <span data-bind="text: currentStage().targetPpm500"></span>
+                <tbody data-bind="foreach: productsWithAmounts">
+                  <tr>
+                    <td style="text-align: left;"><a data-bind="attr: { href: $data.link }, text: $data.name" target="_blank"
+                        style="white-space: wrap;"></a></td>
+                    <td data-bind="text: $data.ppm" style="text-align: right;"></td>
+                    <td data-bind="text: $data.baseGrams === 0 ? '-' : grams" style="text-align: right;"></td>
+                    <td data-bind="text: $data.baseMN === 0 ? '-' : ounces" style="text-align: right;"></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
-
-            <div>
-              <h1>Target PPM (700 Scale)</h1>
-              <span data-bind="text: currentStage().targetPpm700"></span>
+            <div class="official-link">
+              <span data-bind="text: selectedMediumObj().description + ' - '"></span>
+              <span data-bind="visible: selectedStageObj() && selectedStageObj().description, text: selectedStageObj()?.description + ' - '"></span>
+              <a data-bind="attr: {href: selectedMediumObj().feedGuidLink}" target="_blank">Official Feed Schedule</a>
             </div>
           </div>
-          <table class="products">
-            <thead>
-              <tr>
-                <th rowspan="2">Product</th>
-                <th colspan="3" data-bind="text: options().tableLabel" style="text-align: right;"></th>
-              </tr>
-              <tr>
-                <th>ppm (mg/L)</th>
-                <th style="text-align: right;">Grams</th>
-                <th style="text-align: right;">Dry Oz.</th>
-              </tr>
-            </thead>
-
-            <tbody data-bind="foreach: productsWithAmounts">
-              <tr>
-                <td style="text-align: left;"><a data-bind="attr: { href: $data.link }, text: $data.name" target="_blank"
-                    style="white-space: wrap;"></a></td>
-                <td data-bind="text: $data.basePPM" style="text-align: right;"></td>
-                <td data-bind="text: $data.baseGrams === 0 ? '-' : grams" style="text-align: right;"></td>
-                <td data-bind="text: $data.baseMN === 0 ? '-' : ounces" style="text-align: right;"></td>
-              </tr>
-            </tbody>
-          </table>
         </div>
       </div>
     </section>
