Clean up after refactor

--- a/src/index.html
+++ b/src/index.html
@@ -89,17 +89,17 @@
             <div class="targets">
               <div>
                 <h1>Target EC</h1>
-                <span data-bind="text: currentStage().targetEc"></span>
+                <div data-bind="text: currentStage().targetEc"></div>
               </div>
 
               <div>
                 <h1>Target PPM (500 Scale)</h1>
-                <span data-bind="text: currentStage().targetPpm500"></span>
+                <div data-bind="text: currentStage().targetPpm500"></div>
               </div>
 
               <div>
                 <h1>Target PPM (700 Scale)</h1>
-                <span data-bind="text: currentStage().targetPpm700"></span>
+                <div data-bind="text: currentStage().targetPpm700"></div>
               </div>
             </div>
             <div class="product-container">
