--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
   <title>Jack's 3-2-1 Feed Calculator</title>
-<script defer="defer" src="/jacks-feed/bundle.js"></script></head>
+<script defer="defer" src="/jacks-feed/bundle.938467e178fe0e9c81bd.js"></script></head>
 
 <body>
   <main id="ko-app">
